# dunit-os

./: .gitignore  BUILD.md  GIT_GUIDE.md  Makefile  Makefile.bak  README.md  RUN_TERMINAL.sh  TODO.md  build_and_run_multipass.py  build_iso.sh  create_disk.sh  create_iso.sh  grub.cfg  limine.conf  limine_backup.conf  limine_terminal.conf  limine_test_gui.conf  limine_test_terminal.conf  setup_remote.sh  simple_boot.asm  test_boot.asm  test_kernel.asm  test_rust_boot.asm  test_terminal.sh  upload.sh
.github/: loc-badge.json
kernel/: Cargo.toml  build.rs  grub_linker.ld  linker.ld  x86_64-unknown-none.json
kernel/.cargo/: config.toml
kernel/assets/: dufetch_logo.txt  monitor.rgba  terminal.rgba  text.rgba
kernel/src/: allocator.rs  command.rs  cpu.rs  dpkg.rs  font.rs  hal.rs  initrd.rs  interrupts.rs  kthreads.rs  lib.rs  main.rs  main_simple.rs  shell.rs  terminal.rs  ui_loop.rs  window_manager.rs
kernel/src/apps/: dufetch.rs  mod.rs
kernel/src/drivers/: ahci.rs  ata.rs  block.rs  keyboard.rs  mod.rs  mouse.rs  net.rs  pci.rs  registry.rs  virtio_blk.rs
kernel/src/elf/: mod.rs
kernel/src/fs/: devfs.rs  dunitfs.rs  ext2.rs  memfs.rs  mod.rs  procfs.rs  vfs.rs
kernel/src/gui/: renderer.rs
kernel/src/input/: mod.rs
kernel/src/ipc/: mod.rs
kernel/src/memory/: mod.rs  pmm.rs  vmm.rs
kernel/src/process/: mod.rs  scheduler.rs
kernel/src/storage/: gpt.rs  installer.rs  mod.rs
kernel/src/syscall/: mod.rs
kernel/tests/: allocator_properties.rs  elf_properties.rs  interrupt_properties.rs  ipc_message_properties.rs  ipc_shared_memory_properties.rs  pmm_properties.rs  process_isolation_properties.rs  scheduler_properties.rs  syscall_properties.rs  vfs_properties.rs  vmm_properties.rs
userspace/display_server/: Cargo.toml
userspace/display_server/src/: lib.rs  main.rs
userspace/video_driver/: Cargo.toml
(+160 files in other folders)
