[package]
name = "display_server"
version = "0.1.0"
edition = "2021"

[lib]
name = "display_server"
path = "src/lib.rs"

[[bin]]
name = "display_server"
path = "src/main.rs"
required-features = ["binary"]

[features]
binary = []
default = []

[dependencies]
egui = { version = "0.29", default-features = false, features = ["bytemuck"] }

[dev-dependencies]
proptest = "1.0"

[profile.release]
panic = "abort"
lto = true
